--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -112,5 +112,73 @@ $lightGreen: #b9e7e7;
                 
             }
         }
+
+        //footer
+        footer{
+            margin-top: 100px;
+            padding: 20px;
+            background-color: $lightGreen;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            img{
+                width: 120px;
+            }
+        }
+
+        //homepage
+        .home{
+            .posts{
+                display: flex;
+                margin-top: 50px;
+                flex-direction: column;
+                gap: 100px;
+
+                .post{
+                    display: flex;
+                    gap: 100px;
+
+                    //第 1 3 5 row-reverse
+                    &:nth-child(odd){
+                        flex-direction: row-reverse;
+                    }
+
+                    .img{
+                        flex: 2;
+                        //相對位置 下方after效果需要定位點
+                        position: relative;
+                        
+
+                        //層次效果
+                        &::after{
+                            content: "";
+                            width: 100%;
+                            height: 100%;
+                            background-color: $lightGreen;
+                            position: absolute;
+                            top: 10px;
+                            left: 10px;
+                            z-index: -1;
+                            border-radius: 20px;
+                        }
+
+
+                        img{
+                            width: 100%;
+                            max-height:400px ;
+                            border-radius: 20px;
+    
+                            //圖片剛好填滿
+                            object-fit: cover;
+                        }
+                    }
+
+                    .content{
+                        flex: 3;
+                    }
+                }
+            }
+        }
     }
 }
